<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="txt_login_register">Registrarse</string>

    <string name="txt_user_sign">Nombre de Usuario</string>
    <string name="btn_sign_cancel">Cancelar</string>

    <string name="email_error">Valor requerido</string>
    <string name="password_error">Valor requerido</string>
    <string name="user_error">Valor requerido</string>
    <string name="network_error">Error de Conexión</string>

    <string name="login_ok">Sesión Iniciada</string>
    <string name="login_fail">Revise sus Datos</string>

    <string name="listtweet_ok">Lista de Tweets</string>
    <string name="listtweet_fail">Error al recibir los Tweets</string>
    <string name="newtweet_fail">Error al crear el Tweet</string>

    <string name="signup_ok">Registro Exitoso</string>
    <string name="signup_fail">Registro Fallido</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tweet_username">Tweet Username</string>
    <string name="tweet_message">Tweet Message</string>
    <string name="tweet_likes">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_twittear">Twittear</string>
    <string name="hint_mensaje_nuevo_tweet">¿Qué está pasando?</string>
    <string name="delete_nuevo_tweet">Desea Eliminar Nuevo Tweet?</string>
    <string name="delete_nuevo_tweet_title">Eliminar Nuevo Tweet</string>
    <string name="nuevo_tweet_delete">Eliminar</string>
    <string name="nuevo_tweet_cancel">Cancelar</string>
    <string name="nuevo_tweet_empty">Debe escribir un tweet</string>
</resources>