<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    tools:context=".userinterfaces.SignUpActivity">

    <ImageView
        android:id="@+id/id_icono_sign"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_logo_minitwitter_white"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_edit_user_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_icono_sign"
        app:layout_constraintStart_toStartOf="@+id/id_icono_sign"
        app:layout_constraintEnd_toEndOf="@+id/id_icono_sign"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_user_sign"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textColorHint="@color/color_blue_dark"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_edit_email_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_user_sign"
        app:layout_constraintStart_toStartOf="@+id/id_edit_user_sign"
        app:layout_constraintEnd_toEndOf="@+id/id_edit_user_sign"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textColorHint="@color/color_blue_dark"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_edit_password_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_email_sign"
        app:layout_constraintStart_toStartOf="@+id/id_edit_email_sign"
        app:layout_constraintEnd_toEndOf="@+id/id_edit_email_sign"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textColorHint="@color/color_blue_dark"/>

    <Button
        android:id="@+id/id_btn_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_password_sign"
        app:layout_constraintStart_toStartOf="@+id/id_edit_password_sign"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_sign_cancel"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_login_register"
        android:backgroundTint="@color/white"
        android:textColor="@color/color_blue"/>

    <Button
        android:id="@+id/id_btn_sign_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_password_sign"
        app:layout_constraintStart_toEndOf="@+id/id_btn_sign"
        app:layout_constraintEnd_toEndOf="@+id/id_edit_password_sign"
        android:layout_marginTop="32dp"
        android:text="@string/btn_sign_cancel"
        android:backgroundTint="@color/white"
        android:textColor="@color/color_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>